# cheapsynth01

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run_tests.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  sound_comparison.md
.github/workflows/: build.yml  cheapsynth01-pipeline.yml  tests.yml
Source/: CS01AudioProcessor.cpp  CS01AudioProcessor.h  CS01AudioProcessorEditor.cpp  CS01AudioProcessorEditor.h  JuceHeader.h  Parameters.h  ProgramManager.cpp  ProgramManager.h
Source/CS01Synth/: CS01EGProcessor.cpp  CS01EGProcessor.h  CS01LFOProcessor.cpp  CS01LFOProcessor.h  CS01MidiProcessor.cpp  CS01MidiProcessor.h  CS01NoiseGenerator.cpp  CS01NoiseGenerator.h  CS01SynthProcessor.cpp  CS01SynthProcessor.h  CS01SynthVoice.cpp  CS01SynthVoice.h  CS01ToneGenerator.cpp  CS01ToneGenerator.h  CS01VCAProcessor.cpp  CS01VCAProcessor.h  CS01VCFProcessor.cpp  CS01VCFProcessor.h  EGProcessor.cpp  EGProcessor.h  IFilter.h  IG02610LPF.cpp  IG02610LPF.h  INoteHandler.h  ISoundGenerator.h  IWaveformStrategy.h  LFOProcessor.cpp  LFOProcessor.h  MidiProcessor.cpp  MidiProcessor.h  ModernVCFProcessor.cpp  ModernVCFProcessor.h  NoiseGenerator.cpp  NoiseGenerator.h  NoiseProcessor.cpp  NoiseProcessor.h  OriginalVCFProcessor.cpp  OriginalVCFProcessor.h  SoundProcessorExample.h  SynthConstants.h  (+9 more)
Source/Resources/Presets/: Clavinet.xml  Default.xml  Flute.xml  Solo_Synth_Lead.xml  Synth_Bass.xml  Trumpet.xml  Violin.xml
Source/Tests/: LFOProcessorTest.cpp  MidiProcessorTest.cpp  TestHelpers.h  ToneGeneratorTest.cpp  main.cpp
Source/UI/: BreathControlComponent.cpp  BreathControlComponent.h  CS01BreathControlComponent.cpp  CS01BreathControlComponent.h  CS01EGComponent.cpp  CS01EGComponent.h  CS01LFOComponent.cpp  CS01LFOComponent.h  CS01LookAndFeel.cpp  CS01LookAndFeel.h  CS01ModulationComponent.cpp  CS01ModulationComponent.h  CS01OscilloscopeComponent.cpp  CS01OscilloscopeComponent.h  CS01VCAComponent.cpp  CS01VCAComponent.h  CS01VCFComponent.cpp  CS01VCFComponent.h  CS01VCOComponent.cpp  CS01VCOComponent.h  CS01VolumeComponent.cpp  CS01VolumeComponent.h  EGComponent.cpp  EGComponent.h  FilterTypeComponent.cpp  FilterTypeComponent.h  LFOComponent.cpp  LFOComponent.h  ModulationComponent.cpp  ModulationComponent.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  PresetPanel.cpp  PresetPanel.h  ProgramPanel.cpp  ProgramPanel.h  VCAComponent.cpp  VCAComponent.h  VCFComponent.cpp  VCFComponent.h  (+4 more)
Tests/: BinaryData.cpp  BinaryData.h  CMakeLists.txt  README.md  TestRunner.cpp
Tests/integration/: AudioGraphTest.cpp
Tests/mocks/: MockOscillator.h  MockTimer.h  MockToneGenerator.h
Tests/unit/: CS01VCFProcessorTest.cpp  EGProcessorTest.cpp  IG02610LPFTest.cpp  LFOProcessorTest.cpp  MidiProcessorTest.cpp  ModernVCFProcessorTest.cpp  NoiseGeneratorTest.cpp  NoiseProcessorTest.cpp  OriginalVCFProcessorTest.cpp  ProgramManagerTest.cpp  ToneGeneratorTest.cpp  VCAProcessorTest.cpp  VCOProcessorTest.cpp
cmake/: JUCE.cmake
docs/: MIDI-Implementation.md
docs/tech/: filter.md  lfo.md  ymf10150.md
